<resources>
    <string name="app_name">Loan_online</string>
    <string name="prompt_login">Логин</string>
    <string name="prompt_password">Пароль</string>
    <string name="action_sign_in">Войти</string>
    <string name="registration">Регистрация</string>
    <string name="invalid_login_or_password">Неверный логин или пароль</string>
    <string name="empty_login_or_password">Пустой логин или пароль</string>
    <string name="network_error">Не удалось получить ответ от сервера, проверьте соединение</string>
    <string name="this_user_is_already_exist">Этот пользователь уже зарегистрирован</string>
    <string name="loans_online_title">Займ онлайн</string>
    <string name="creation_loan">Оформление займа</string>
    <string name="amount">Сумма</string>
    <string name="amountString">Сумма: %1$s ₽</string>
    <string name="stateString">Состояние: %1$s</string>
    <string name="firstName">Имя</string>
    <string name="firstNameString">Имя: %1$s</string>
    <string name="lastName">Фамилия</string>
    <string name="lastNameString">Фамилия: %1$s</string>
    <string name="percent">Процент: %1$f</string>
    <string name="percentString">Процент: %1$s</string>
    <string name="period">Срок: %1$d</string>
    <string name="periodString">Срок: %1$s</string>
    <string name="maxAmountString">Максимальная сумма: %1$s ₽</string>
    <string name="phoneNumber">Номер телефона </string>
    <string name="phoneNumberString">Номер телефона: %1$s </string>
    <string name="date">Дата: %1$s </string>
    <string name="create">Оформить</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="createLoan">Оформить займ</string>
    <string name="exit">Выйти из профиля</string>
    <string name="networkExceptionCreateLoan">Оформление займа не доступно без подключения к сети</string>

</resources>